--- a/client-app/src/app/home/home.component.html
+++ b/client-app/src/app/home/home.component.html
@@ -13,7 +13,7 @@
         <a routerLink="./equipos" class="nav-link" routerLinkActive="active">
           Equipos
         </a>
-        <a routerLink="./contratos" class="nav-link" routerLinkActive="active">
+        <a routerLink="./contratos/lista-contrato" class="nav-link" routerLinkActive="active">
           Contratos
         </a>
 
