--- a/client-app/src/app/home/mantenimiento/lista-orden-trabajo/add-orden-trabajo/add-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/lista-orden-trabajo/add-orden-trabajo/add-orden-trabajo.component.html
@@ -188,10 +188,10 @@
 </form>
 
 
-<app-add-edit-solicitud-repuesto
-  *ngIf="showFormAbmSolicitudRepuesto"
-  [solicitudRepuesto]='selectedSolicitudRepuesto'
-  [tituloForm]='formtitle'
-  [isEdit]="isEdit">
-</app-add-edit-solicitud-repuesto>
+<!--<app-add-edit-solicitud-repuesto-->
+  <!--*ngIf="showFormAbmSolicitudRepuesto"-->
+  <!--[solicitudRepuesto]='selectedSolicitudRepuesto'-->
+  <!--[tituloForm]='formtitle'-->
+  <!--[isEdit]="isEdit">-->
+<!--</app-add-edit-solicitud-repuesto>-->
 
