--- a/client-app/src/app/shared/representante/representante.component.html
+++ b/client-app/src/app/shared/representante/representante.component.html
@@ -1,12 +1,12 @@
 <!--Modal para agregar o editar los datos de un representante-->
 <clr-modal [(clrModalOpen)]="modalRepreOpen" [clrModalClosable]="false">
-  <h3 class="modal-title form-add-edit-equipo-label">{{modalRepreTitle}}</h3>
+  <h3 class="modal-title form-representante-label">{{modalRepreTitle}}</h3>
   <div class="modal-body">
     <form class="compact" #repreForm="ngForm">
       <section class="form-block">
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3 col-label-equipo">
-            <label class="form-add-edit-equipo-label required" for="empresa">Nombre/Empresa:</label>
+          <div class="col-xs-3 col-label-representante">
+            <label class="form-representante-label required" for="empresa">Nombre/Empresa:</label>
           </div>
           <div class="col-xs-9">
             <input class="form-control" id="empresa"
@@ -16,8 +16,8 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3 col-label-equipo">
-            <label class="form-add-edit-equipo-label" for="direccion">Dirección:</label>
+          <div class="col-xs-3 col-label-representante">
+            <label class="form-representante-label" for="direccion">Dirección:</label>
           </div>
           <div class="col-xs-9">
             <input class="form-control" id="direccion"
@@ -27,8 +27,8 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3 col-label-equipo">
-            <label class="form-add-edit-equipo-label" for="email">Email:</label>
+          <div class="col-xs-3 col-label-representante">
+            <label class="form-representante-label" for="email">Email:</label>
           </div>
           <div class="col-xs-9">
             <input class="form-control" id="email"
@@ -37,8 +37,8 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3 col-label-equipo">
-            <label class="form-add-edit-equipo-label required" for="telefono">Telefono:</label>
+          <div class="col-xs-3 col-label-representante">
+            <label class="form-representante-label required" for="telefono">Telefono:</label>
           </div>
           <div class="col-xs-3">
             <input class="form-control" id="telefono" required
@@ -46,7 +46,7 @@
           </div>
 
           <div class="col-xs-3">
-            <label class="form-add-edit-equipo-label required" for="contacto">Tel. Contacto:</label>
+            <label class="form-representante-label required" for="contacto">Tel. Contacto:</label>
           </div>
           <div class="col-xs-3">
             <input class="form-control" id="contacto" required
@@ -55,8 +55,8 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3 col-label-equipo">
-            <label class="form-add-edit-equipo-label required" for="telefono">Cel.:</label>
+          <div class="col-xs-3 col-label-representante">
+            <label class="form-representante-label required" for="telefono">Cel.:</label>
           </div>
           <div class="col-xs-4">
             <input class="form-control" id="cel" required
