--- a/client-app/src/app/home/home.component.html
+++ b/client-app/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     </div>
     <nav class="sidenav">
       <section class="sidenav-content">
-        <a routerLink="./equipos" class="nav-link" routerLinkActive="active">
+        <a routerLink="./equipos/lista-equipo" class="nav-link" routerLinkActive="active">
           Equipos
         </a>
         <a routerLink="./contratos/lista-contrato" class="nav-link" routerLinkActive="active">
