--- a/client-app/src/app/shared/representante/representante.component.css
+++ b/client-app/src/app/shared/representante/representante.component.css
@@ -1,3 +1,9 @@
+.form-representante-title {
+    font-weight: bold;
+    font-size: 24px;
+    text-align: center;
+}
+
 /*label del formulario*/
 .form-representante-label {
   font-weight: bold !important;
