--- a/client-app/src/app/home/equipo/equipo.component.html
+++ b/client-app/src/app/home/equipo/equipo.component.html
@@ -1,110 +1,1 @@
-<form class=" compact" *ngIf="!showFormAbmEquipo">
-  <h5 class="form-equipo-title">Equipos</h5>
-  <section>
-    <div>
-      <button class="btn btn-sm btn-success"
-              (click)="addEquipo()">
-        <clr-icon shape="plus"></clr-icon>
-        Add
-      </button>
-      <button class="btn btn-sm btn-success"
-              *ngIf="selectedEquipo != null"
-              (click)="editEquipo()">
-        <clr-icon shape="pencil"></clr-icon>
-        Edit
-      </button>
-
-      <!--<button class="btn btn-sm btn-warning"-->
-              <!--*ngIf="selectedEquipo != null"-->
-              <!--(click)="deleteEquipo()">-->
-        <!--<clr-icon shape="trash"></clr-icon>-->
-        <!--Delete-->
-      <!--</button>-->
-    </div>
-    <!--success action-->
-    <div class="alert alert-success alert-sm" *ngIf="success">
-      <div class="alert-items">
-        <div class="alert-item static">
-          <div class="alert-icon-wrapper">
-            <clr-icon class="alert-icon"
-                      shape="check-circle">
-            </clr-icon>
-          </div>
-          <span class="alert-text">
-            {{ successMessage }}
-          </span>
-        </div>
-      </div>
-    </div>
-
-    <!-- errors -->
-    <div class="alert alert-danger alert-sm" *ngIf="error">
-      <div class="alert-items">
-        <div class="alert-item static">
-          <div class="alert-icon-wrapper">
-            <clr-icon class="alert-icon"
-                      shape="exclamation-circle">
-            </clr-icon>
-          </div>
-          <span class="alert-text">{{errorMessage}}</span>
-        </div>
-      </div>
-      <button type="button" class="close" aria-label="Close"
-              (click)="error = false">
-        <clr-icon aria-hidden="true" shape="close"></clr-icon>
-      </button>
-    </div>
-
-    <clr-datagrid [clrDgLoading]="loading">
-      <clr-dg-column [clrDgSortBy]="'numeroSerie'">Nro. Serie</clr-dg-column>
-      <clr-dg-column>Tipo</clr-dg-column>
-      <clr-dg-column>Modelo</clr-dg-column>
-      <clr-dg-column>Contrato</clr-dg-column>
-      <clr-dg-column>Representante</clr-dg-column>
-      <clr-dg-column>Ubicación</clr-dg-column>
-
-      <clr-dg-row *ngFor="let equipo of equipos" (click)="selectEquipo(equipo)"
-                  [class.selectEquipo]="equipo === selectedEquipo">
-        <clr-dg-cell>{{equipo.numeroSerie}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.tipoEquipo.tipo}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.modeloEquipo.modelo}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.contrato?.numeroContrato}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.representante.nombre}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.ubicacion?.numeroSala}}</clr-dg-cell>
-      </clr-dg-row>
-
-      <clr-dg-footer>
-        {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}}
-        of {{total}} Equipos
-        <clr-dg-pagination #pagination [clrDgPageSize]="5" [clrDgTotalItems]="total"></clr-dg-pagination>
-      </clr-dg-footer>
-    </clr-datagrid>
-  </section>
-</form>
-
-<app-add-edit-equipo
-  *ngIf="showFormAbmEquipo"
-  [equipo]='selectedEquipo'
-  [tituloForm]='formTitle'
-  [isEdit]= 'isEdit'
-  (onCanceled)="onCancelAddEditEquipo($event)"
-  (onFinished)="onCloseAddEditEquipo($event)">
-</app-add-edit-equipo>
-
-<!--confirmations of actions taken (add/remove/save/cancel) -->
-<clr-modal [(clrModalOpen)]="modalConfirmOpen"
-           [clrModalClosable]="false"
-           *ngIf="selectedEquipo">
-  <h3 class="modal-title">Eliminar Equipo</h3>
-  <div class="modal-body">
-    <p>Está seguro que desea eliminar el equipo {{selectedEquipo.numeroSerie}}?</p>
-  </div>
-  <div class="modal-footer">
-    <button class="btn btn-outline" type="button"
-            (click)="modalConfirmOpen = false">Cancel
-    </button>
-    <button class="btn btn-primary" type="button"
-            (click)="confirmarEliminacion()">Ok
-    </button>
-  </div>
-</clr-modal>
+<router-outlet></router-outlet>
