--- a/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
+++ b/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
@@ -1,16 +1,15 @@
-<!--<form class=" compact" *ngIf="!showFormAbmContrato">-->
-<form class=" compact">
-  <h5 class="form-contrato-title">Contratos</h5>
+<form class=" compact" *ngIf="!showFormAbmEquipo">
+  <h5 class="form-equipo-title">Equipos</h5>
   <section>
     <div>
       <button class="btn btn-sm btn-success"
-              (click)="goNewContratoForm()">
+              (click)="addEquipo()">
         <clr-icon shape="plus"></clr-icon>
         Add
       </button>
       <button class="btn btn-sm btn-success"
-              *ngIf="selectedContrato != null"
-              (click)="editContrato()">
+              *ngIf="selectedEquipo != null"
+              (click)="editEquipo()">
         <clr-icon shape="pencil"></clr-icon>
         Edit
       </button>
@@ -50,38 +49,29 @@
     </div>
 
     <clr-datagrid [clrDgLoading]="loading">
-      <clr-dg-column [clrDgSortBy]="'id'">ID</clr-dg-column>
-      <clr-dg-column [clrDgSortBy]="'numeroContrato'">Nro. Contrato</clr-dg-column>
-      <clr-dg-column>Nombre Licitación</clr-dg-column>
+      <clr-dg-column [clrDgSortBy]="'numeroSerie'">Nro. Serie</clr-dg-column>
       <clr-dg-column>Tipo</clr-dg-column>
-      <clr-dg-column>Estado</clr-dg-column>
-      <clr-dg-column>Equipos</clr-dg-column>
-      <clr-dg-column>Inicio</clr-dg-column>
-      <clr-dg-column>Finalización</clr-dg-column>
+      <clr-dg-column>Modelo</clr-dg-column>
+      <clr-dg-column>Contrato</clr-dg-column>
+      <clr-dg-column>Representante</clr-dg-column>
+      <clr-dg-column>Ubicación</clr-dg-column>
 
-      <clr-dg-row *ngFor="let contrato of contratos" (click)="selectContrato(contrato)"
-                  [class.selectContrato]="contrato === selectedContrato">
-        <clr-dg-cell>{{contrato.id}}</clr-dg-cell>
-        <clr-dg-cell>{{contrato.numeroContrato}}</clr-dg-cell>
-        <clr-dg-cell>{{contrato.nombreLicitacion}}</clr-dg-cell>
-        <clr-dg-cell>{{contrato.tipoProcedimiento}}</clr-dg-cell>
-        <clr-dg-cell>{{contrato.estadoContrato}}</clr-dg-cell>
-        <clr-dg-cell>
-          <ul class="list-unstyled" *ngFor="let equipo of contrato.equipos">
-            <li>{{equipo.numeroSerie}}-{{equipo.descripcionEquipo}}</li>
-          </ul>
-        </clr-dg-cell>
-        <clr-dg-cell>{{contrato.fechaInicio}}</clr-dg-cell>
-        <clr-dg-cell>{{contrato.fechaFin}}</clr-dg-cell>
+      <clr-dg-row *ngFor="let equipo of equipos" (click)="selectEquipo(equipo)"
+                  [class.selectEquipo]="equipo === selectedEquipo">
+        <clr-dg-cell>{{equipo.numeroSerie}}</clr-dg-cell>
+        <clr-dg-cell>{{equipo.tipoEquipo.tipo}}</clr-dg-cell>
+        <clr-dg-cell>{{equipo.modeloEquipo.modelo}}</clr-dg-cell>
+        <clr-dg-cell>{{equipo.contrato?.numeroContrato}}</clr-dg-cell>
+        <clr-dg-cell>{{equipo.representante?.nombre}}</clr-dg-cell>
+        <clr-dg-cell>{{equipo.ubicacion?.numeroSala}}</clr-dg-cell>
       </clr-dg-row>
 
       <clr-dg-footer>
         {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}}
-        of {{total}} Contratos
+        of {{total}} Equipos
         <clr-dg-pagination #pagination [clrDgPageSize]="5" [clrDgTotalItems]="total"></clr-dg-pagination>
       </clr-dg-footer>
     </clr-datagrid>
   </section>
 </form>
-
 
